   vectors
#20 August 23, 1998
 - plove.bat added
 - widgets.tcl updated
#21 Jan 1, 1999
 - small fixes
#22 June 21, 1999
 - all sources checked in under CVS
 - added a small, almost dummy Makefile.in
 - version.log renamed to ChangeLog
July 17, 1999
 - added slash/backslash option for gnuplot on Windows
------ omnetpp-2.0b2 released ------
Jan 18, 2000
 - bugfix: Plove hung on selecting filters
------ omnetpp-2.0b3 released ------
Apr 5, 2000
 - Makefile.vc now creates plove.bat (requires correct WISH= setting in
   configuser.vc)
May 7, 2000
 - plove now starts using the classic trick to avoid a hardcoded 'wish' path
   (check top of the 'plove' file).
------ omnetpp-2.0b4 released ------
------ omnetpp-2.0b5 released ------
Aug 26, 2000
 - modified startup code
Aug 29, 2000
 - Makefile.vc modified: generated plove.bat now passes command-line parameters
   to Plove
------ omnetpp-2.0 released ------
------ omnetpp-2.0p1 released ------
Mar 24, 2001
 - now you can build a single Plove executable, with all Tcl code compiled in.
   This made it necessary to reorganize the makefiles too.
Apr 3, 2001
 - fix: the ap window didn't acquire focus on startup (added deiconify command)
Apr 16, 2001
 - Plove can now be compiled as GUI application (not console app) on Windows,
   setting USE_WINMAIN=yes in configuser.vc.
   NOTE: main() and WinMain() use completely different startup sequences.
   The reason: main()'s startup code with WinMain would result in an "unknown
   channel stdout" error in the Tcl code (and it's not so easy to create a
   dummy channel named stdout), while WinMain()'s startup sequence with main()
   would result in a working command prompt in the console window (!!!).
   Pretty weird.
 - added plove.ico
 - window title
Apr 19, 2001
 - default config file added: before processing $HOME/.ploverc, also reads
   .ploverc from the Plove program dir
Apr 20, 2001
 - bugfix in new WinMain() startup code
Apr 28, 2001
 - bugfix in .ploverc handling